...
    public let username: String
    public let firstName: String
    public let lastName: String?
    public let loginName: String
    public let bio: String?
    
    public var name: String { firstName + " " + (lastName ?? "") }
}

