...
    
    weak var delegate: WebViewViewControllerDelegate?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "WebView"
        progressView.progressViewStyle = .bar
        estimatedProgressObservation = webView.observe(\.estimatedProgress, options: [], changeHandler: { [weak self] _, _ in // KVO
            guard let self else { return }
            presenter?.didUpdateProgressValue(webView.estimatedProgress)
        })
        
...
